--- a/OrderManagementSystem/product-service/build.gradle
+++ b/OrderManagementSystem/product-service/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 group = 'com.oms'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 java {
 	toolchain {
@@ -26,3 +27,4 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
