--- a/OrderManagementSystem/product-service/.github/workflows/commit-stage.yml
+++ b/OrderManagementSystem/product-service/.github/workflows/commit-stage.yml
@@ -28,7 +28,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         if: success() || failure()
         with:
-          sarif_file: ${{step.scan.output.sarif}}
+          sarif_file: ${{step.scan.outputs.sarif}}
       - name: Build,unit tests and integration tests
         run: |
           chmod +x gradlew
