--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -38,5 +38,6 @@ jobs:
           sarif_file: ${{steps.scan.outputs.sarif}}
       - name: Build,unit tests and integration tests
         run: |
+          cd ${{ matrix.project }}
           chmod +x gradlew
           ./gradlew build
