产品服务使用配置中心的配置

--- a/OrderManagementSystem/product-service/src/main/resources/application.yml
+++ b/OrderManagementSystem/product-service/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 spring:
   application:
     name: product-service
+  profiles:
+    active: dev
   config:
     import: "optional:configserver:"
   cloud:
     config:
-      uri: http:localhost:8888
+      uri: http://localhost:8888
 server:
   port: 9001
   tomcat:
